--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-uuid": "^2.0.3",
     "styled-components": "^6.1.17",
-    "uuid": "^11.1.0"
+    "react-dom": "18.3.1",
+    "react-native-web": "~0.19.13",
+    "@expo/metro-runtime": "~4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
